--- a/src/index.html
+++ b/src/index.html
@@ -2,6 +2,8 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
+  <link href="https://fonts.googleapis.com/css?family=Roboto:400" rel="stylesheet"> 
+  <link href="https://fonts.googleapis.com/css?family=Overpass" rel="stylesheet"> 
   <title>InSolution</title>
   <base href="/">
 
